only allow spilling of line boxes if it's consistent with current directionality. (cherry picked in Webcore's r7692 from David Hyatt <hyatt@apple.com>)

BUG: 112073


svn path=/trunk/KDE/kdelibs/; revision=627993